# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-02-22 Michael Truog   <mjtruog at protonmail dot com>

    * Add time_offset_last_change and time_offset_last_event
      to the CloudI Service API logging_status output for tracking
      the last change to the system clock

2021-02-19 Michael Truog   <mjtruog at protonmail dot com>

    * Improve C/C++ CloudI API termination handler with
      boost::diagnostic_information output and add the
      CloudI::API::backtrace() to the assert exception
    * Add queue_mode_sync_last values and queue_mode_overload_last values
      to the CloudI Service API logging_status output for tracking
      the last occurrence of both queue modes
      (queue_mode_sync_last_start,
       queue_mode_sync_last_start_event,
       queue_mode_sync_last_end,
       queue_mode_sync_last_end_event,
       queue_mode_sync_last_total,
       queue_mode_overload_last_start,
       queue_mode_overload_last_start_event,
       queue_mode_overload_last_end,
       queue_mode_overload_last_end_event,
       queue_mode_overload_last_total)

2021-02-16 Michael Truog   <mjtruog at protonmail dot com>

    * Fix Elixir.CloudILogger module encoding
    * Update reltool_util

2021-02-14 Michael Truog   <mjtruog at protonmail dot com>

    * Improve installed cloudi bin script installation

2021-02-11 Michael Truog   <mjtruog at protonmail dot com>

    * Improve count_process_dynamic logic
    * Fix Java, Perl, PHP, Ruby integration tests CloudI API initialization
      (exceptions are caught properly now)

2021-02-09 Michael Truog   <mjtruog at protonmail dot com>

    * Add the suspend_dependants argument to
      cloudi_service_api_batch for automatically suspending any
      dependant service (that is already running) and automatically
      resuming once the queue dependency has finished running
      all of its queued service configurations
    * Fix service configuration options rate_request_max,