@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fenc=utf-8 sts=4 ts=4 et nomod:
 
+2021-02-24 Michael Truog   <mjtruog at protonmail dot com>
+
+    * Update quickrand
+
 2021-02-22 Michael Truog   <mjtruog at protonmail dot com>
 
     * Add time_offset_last_change and time_offset_last_event
